SERVER-15286 don't try to explode for sort if zero fields to explode