src/mongo/db/query/planner_analysis.cpp
@@ -306,6 +306,11 @@ namespace mongo {
                 return false;
             }
 
+            // Only explode if there's at least one field to explode for this scan.
+            if (0 == boundsIdx) {
+                return false;
+            }
+
             // The rest of the fields define the sort order we could obtain by exploding
             // the bounds.
             BSONObjBuilder resultingSortBob;
